# iSMC

./: CMakeLists.txt  INSTALL  INSTALL.txt  README  README.md  buildBin.sh
doc/: README.md  ismc_opt.bpp  mapper_opt.bpp
doc/example/: README.md  example.rho.1Mb.bedgraph  example.rho.250kb.bedgraph  example.rho.25kb.bedgraph  example.tab  example2.rho.1Mb.bedgraph  example2.rho.250kb.bedgraph  example2.rho.25kb.bedgraph  example_demography.txt  example_estimates.txt  map.bpp  opt.bpp
src/: AbstractParametrizedMatrix.cpp  AbstractParametrizedMatrix.h  BackupListenerOv.cpp  BackupListenerOv.h  BaumWelch.cpp  BaumWelch.h  CMakeLists.txt  GammaWithHotspots.h  Global.cpp  Global.h  HiddenMarkovModelI.h  HmmStatesLibrary.cpp  HmmStatesLibrary.h  MarkovModulatedSmc.cpp  MarkovModulatedSmc.h  MatrixOptimizationFunction.cpp  MatrixOptimizationFunction.h  MmPsmc.cpp  MmPsmc.h  MmSmcEmissionProbabilities.cpp  MmSmcEmissionProbabilities.h  MmSmcTransitionProbabilities.cpp  MmSmcTransitionProbabilities.h  MultipleMmPsmc.cpp  MultipleMmPsmc.h  OptionsContainer.h  ParameterCategoryTransitions.cpp  ParameterCategoryTransitions.h  ParametrizedMatrixI.h  PolymorphismData.cpp  PolymorphismData.h  Psmc.cpp  Psmc.h  RelativeStopCondition.cpp  RelativeStopCondition.h  SequentiallyMarkovCoalescent.cpp  SequentiallyMarkovCoalescent.h  SmcDecodingWrapper.cpp  SmcDecodingWrapper.h  SmcEmissionProbabilities.cpp  (+14 more)
tools/Python/: generate_tab.py
tools/r_scripts/: simulate_seqs.R
